--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dev = [
   "ruff>=0.4",
   "httpx>=0.27",
 ]
+browser = [
+  "playwright>=1.40",
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
