--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
   "pydantic>=2.6",
   "jinja2>=3.1",
   "python-dotenv>=1.0",
+  "scikit-learn>=1.4",
 ]
 
 [project.optional-dependencies]
