Add user authentication, session management, and per-user isolation. Create 5 self-learning review agents for code quality checks.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ OPENAI_API_KEY=sk-your-key-here
 
 # Optional - database path (defaults to ./data/news.db)
 # NEWS_DB_PATH=./data/news.db
+
+
+BROWSERBASE_API_KEY= bb_live_9yaxrFlLH3-7e8Ji_4yUFr7dO70
+BROWSERBASE_PROJECT_ID= 05c0ac9c-17d2-48dd-8ca0-4aeff57f5e3e
