--- a/.github/workflows/overnight-review.yml
+++ b/.github/workflows/overnight-review.yml
@@ -123,6 +123,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add artifacts/ .claude/rules/
+          git add -f artifacts/ .claude/rules/
           git diff --staged --quiet || git commit -m "Overnight review artifacts - $(date +%Y-%m-%d)"
           git push
