--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
   "python-dotenv>=1.0",
   "scikit-learn>=1.4",
   "bcrypt>=4.0",
+  "openai>=1.0,<3.0",
 ]
 
 [project.optional-dependencies]
